# acucare-pathways

./: .env.example  .gitignore  BUILD_REPORT.md  Dockerfile  Makefile  README.md  alembic.ini  claude_build_plan.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
app/: __init__.py  main.py
copy/: en-GB.json
data/: risk_register.json
deploy/: .env.example  README.md  deploy.sh  docker-compose.prod.yml  nginx.conf
docs/: ARCHITECTURE.md  CLINICAL_CONTENT.md  CLINICAL_SIGNOFF_PACK.md  CQC_DEMO_WALKTHROUGH.md  CQC_DRYRUN_GUIDE.md  CQC_EVIDENCE_PACK.md  DECISIONS.md  RISK_REGISTER.md  RULES_ENGINE.md  SECURITY_BASELINE.md  SECURITY_REVIEW_CHECKLIST.md  TRIAGE_WORKFLOW.md
rulesets/: README.md  uk-private-triage-v1.0.0.yaml
scripts/: cqc_demo.py  create_scheduling_data.py  create_test_accounts.py
tests/: __init__.py  conftest.py  test_audit_append_only.py  test_booking_policy.py  test_booking_safeguards.py  test_change_control.py  test_checkin_api.py  test_consent.py  test_deterioration_escalation.py  test_disposition.py  test_disposition_finalization.py  test_evidence_export.py  test_facts_extraction.py  test_health.py  test_incident_evidence.py  test_incidents.py  test_intake_validation.py  test_magic_link_expiry.py  test_messaging.py  test_mfa.py  test_monitoring.py  test_questionnaire_versioning.py  test_rbac.py  test_rules_engine.py  test_rules_golden.py  test_rules_loader.py  test_safeguards.py  test_scheduling.py  test_scoring.py  test_scoring_auditc.py  test_scoring_gad7.py  test_scoring_phq9.py  (+2 more)
(+211 files in other folders)
